--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-translate-api": "^2.3.0",
     "mongoose": "^8.9.6",
     "pg": "^8.13.1",
+    "quill": "^2.0.3",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
